# kinect_table_system

./: .gitignore  CONTRIBUTING.md  GITHUB_PUSH_COMMANDS.md  GITHUB_SETUP.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  config.py  download_hand_model.py  main.py  requirements.txt  setup-git.ps1  setup.py  test_import.py  test_kinect_sdk.py
.github/workflows/: ci.yml
data/: calibration_data.json
docs/: GESTURE_QUICKSTART.md  RESUMEN_IMPLEMENTACION.md  ROADMAP_SIGUIENTE_IMPLEMENTACION.md  VERIFICACION_ARCHIVOS.md
examples/: gesture_demo.py  kinect_table_server.py  start_api_server.py
gesture_recognition_app/: INICIO_PASO_A_PASO.md  QUICKSTART.md  README.md  SOLUCION_IMPORTS.md  hand_tracking.py  index.html  package-lock.json  package.json  requirements-minimal.txt  start.bat  start.sh  verificar_instalacion.py  vite.config.js
gesture_recognition_app/python_backend/: calibration.py  requirements.txt  test_hand_tracking.py  websocket_server.py
gesture_recognition_app/src/: App.css  App.jsx  App_old.css  App_old.jsx  CalibrationPanel.jsx  InteractionDemo.jsx  (+4 more)
gesture_recognition_app/src-tauri/: Cargo.toml  tauri.conf.json
gesture_recognition_app/src-tauri/icons/: icon.icns
models/: README.md
modules/: __init__.py  gesture_actions.py  gesture_api_server.py  gesture_recognition.py  hand_tracking.py  interaction_engine.py  kinect_capture.py  mouse_control.py  object_detection.py
scripts/: calibrate_kinect.py  download_models.py  install_ubuntu.sh
tauri-app/: README.md  index.html  package-lock.json  package.json  vite.config.ts
utils/: logger.py
(+14 files in other folders)
