[package]
name = "hand-gesture-recognition"
version = "0.1.0"
description = "Hand Gesture Recognition with Kinect Table System"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-minimize", "window-start-dragging", "window-close", "window-unmaximize", "window-unminimize", "window-maximize", "window-hide", "window-show", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
